--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "name": "es6test",
   "version": "1.0.0",
   "description": "This is a chance to test es6 with node 9.3",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node index.html",
+    "dev": "node index.html"
   },
   "repository": {
     "type": "git",
